# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  actions.py  compare_data.py  data_parser.py  file.py  gendiff.py  generate_diff.py  plain.py  stylish.py
gendiff/formatters/: format.py  json.py  json_format.py  plain.py  plain_format.py  stylish.py  stylish_format.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_parsing_data.py
tests/fixtures/: first_file_test2.yml  result_flat_json.txt  result_nested_json.json  result_parce_json  result_test1.json  result_test2.json  second_file_test2.yml
