[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Viktory <vberkle@gmail.com>"]
license = "no"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.1"
PyYAML = "^6.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
